--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
-  "name": "fixxy",
-  "version": "0.1.0",
-  "private": true,
+  "name": "with-tailwindcss",
+  "version": "1.0.0",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "next": "10.0.5",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
-  }
+    "next": "latest",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-hook-form": "^6.14.2",
+    "react-hooks-helper": "^1.6.0"
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^5.5.0",
+    "autoprefixer": "10.0.2",
+    "babel-plugin-inline-react-svg": "^1.1.2",
+    "postcss": "8.1.7",
+    "tailwindcss": "^2.0.2"
+  },
+  "license": "MIT"
 }
